force-app/main/default/objects/Product__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates products not currently used</description>
    <inlineHelpText>Archived products are not currently used for services</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>