force-app/main/default/objects/Product__c/fields/Caseworker_Requestable__c.field-meta.xml
<CustomField>
    <fullName>Caseworker_Requestable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Caseworker Requestable</label>
    <type>Checkbox</type>
</CustomField>