force-app/main/default/objects/Product__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Living Room</fullName>
            </value>
            <value>
                <fullName>Dining Room</fullName>
            </value>
            <value>
                <fullName>Bedroom</fullName>
            </value>
            <value>
                <fullName>Mattresses</fullName>
            </value>
            <value>
                <fullName>Assorted Items</fullName>
            </value>
            <value>
                <fullName>Bedroom Furniture</fullName>
            </value>
            <value>
                <fullName>Bed Frames</fullName>
                <isActive>false</isActive>
                <label>Bed Frames</label>
            </value>
            <value>
                <fullName>Misc Kitchen</fullName>
                <isActive>false</isActive>
                <label>Misc Kitchen</label>
            </value>
            <value>
                <fullName>Misc Toys</fullName>
                <isActive>false</isActive>
                <label>Misc Toys</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>