force-app/main/default/objects/Product__c/fields/Flexible__c.field-meta.xml
<CustomField>
    <fullName>Flexible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>These are items that we have quantity available regards of request</inlineHelpText>
    <label>Flexible</label>
    <type>Checkbox</type>
</CustomField>