force-app/main/default/objects/Product__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <label>Limit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Household Size</fullName>
            </value>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>No Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>