force-app/main/default/objects/Product__c/fields/Pick_up_Fee__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_Fee__c</fullName>
    <inlineHelpText>Fee being charged to pickup an item</inlineHelpText>
    <label>Pick-up Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>