force-app/main/default/objects/Product__c/fields/Pickup_Fee_Applied__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Fee_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this product is added to a service item record, the Donation Pickup Fee gets set to the Service record</description>
    <inlineHelpText>When this product is added to a service item record, the Donation Pickup Fee gets set to the Service record</inlineHelpText>
    <label>Pickup Fee Applied (Delete)</label>
    <type>Checkbox</type>
</CustomField>