force-app/main/default/objects/Product__c/fields/Pickup_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Product_Name__c</fullName>
    <label>Pickup Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>