force-app/main/default/objects/Product__c/fields/Product_Fee__c.field-meta.xml
<CustomField>
    <fullName>Product_Fee__c</fullName>
    <inlineHelpText>This is fee of a product being sold (outgoing)</inlineHelpText>
    <label>Product Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>