force-app/main/default/objects/Product__c/fields/ProductCubicFeet__c.field-meta.xml
<CustomField>
    <fullName>ProductCubicFeet__c</fullName>
    <label>Product Cubic Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>