force-app/main/default/objects/Product__c/fields/Staff_Requestable__c.field-meta.xml
<CustomField>
    <fullName>Staff_Requestable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Staff Requestable</label>
    <type>Checkbox</type>
</CustomField>