force-app/main/default/objects/Product__c/fields/Website_Pickup_Requestable__c.field-meta.xml
<CustomField>
    <fullName>Website_Pickup_Requestable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Website Pickup Requestable</label>
    <type>Checkbox</type>
</CustomField>