force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Estimated_Value__c</columns>
    <columns>Flexible__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Taxable__c</columns>
    <columns>Archived__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>