force-app/main/default/objects/Product__c/listViews/Archived_Items.listView-meta.xml
<ListView>
    <fullName>Archived_Items</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Archived__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Archived Items</label>
</ListView>