force-app/main/default/objects/Product__c/listViews/Client_Request_Products.listView-meta.xml
<ListView>
    <fullName>Client_Request_Products</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Staff_Requestable__c</columns>
    <columns>Caseworker_Requestable__c</columns>
    <columns>Flexible__c</columns>
    <columns>Limit__c</columns>
    <columns>Invoiceable__c</columns>
    <columns>Product_Fee__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Estimated_Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Staff_Requestable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Client Request Products</label>
</ListView>