force-app/main/default/objects/Product__c/listViews/Flexible_Items.listView-meta.xml
<ListView>
    <fullName>Flexible_Items</fullName>
    <columns>NAME</columns>
    <columns>Flexible__c</columns>
    <columns>Limit__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Flexible__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Archived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Flexible Items</label>
    <sharedTo>
        <role>OfficeMgmt</role>
        <role>OfficeStaff</role>
    </sharedTo>
</ListView>