force-app/main/default/objects/Product__c/listViews/Invoiceable.listView-meta.xml
<ListView>
    <fullName>Invoiceable</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoiceable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoiceable</label>
</ListView>