force-app/main/default/objects/Product__c/listViews/Website_Pickup_Requestable.listView-meta.xml
<ListView>
    <fullName>Website_Pickup_Requestable</fullName>
    <columns>NAME</columns>
    <columns>Pickup_Product_Name__c</columns>
    <columns>Website_Pickup_Requestable__c</columns>
    <columns>Pick_up_Fee__c</columns>
    <columns>ProductCubicFeet__c</columns>
    <columns>ProductWeight__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Website_Pickup_Requestable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Website Pickup Requestable</label>
</ListView>